--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
                     </div>
                     <div class="operations">
                         <div class="ops">
-                        <button>+</button>
-                        <button>-</button>
-                        <button>*</button>
-                        <button>/</button>
+                        <button onclick="op(`+`)" >+</button>
+                        <button onclick="op(`-`)">-</button>
+                        <button onclick="op(`*`)">*</button>
+                        <button onclick="op(`/`)">/</button>
                         </div>
                         <div class="ops2">
-                            <button>=</button>
-                            <button><=</button>
+                            <button onclick="op(`=`)">=</button>
+                            <button onclick="op(`bcksp`)">←</button>
+                            <button onclick="op(`C`)">C</button>
                         </div>
                         
                     </div>
